--- a/SpaceShooter/SpaceShooter.vcxproj.filters
+++ b/SpaceShooter/SpaceShooter.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="EnemyHorizontal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SoundLoader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EnemyHorizontal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
